DOC: simplify expressions

--- a/docs/jpsi2pipipi.ipynb
+++ b/docs/jpsi2pipipi.ipynb
@@ -68,7 +68,12 @@
     "    ThreeBodyDecay,\n",
     "    ThreeBodyDecayChain,\n",
     ")\n",
-    "from ampform_dpd.io import as_markdown_table, aslatex, perform_cached_lambdify\n",
+    "from ampform_dpd.io import (\n",
+    "    as_markdown_table,\n",
+    "    aslatex,\n",
+    "    get_readable_hash,\n",
+    "    perform_cached_lambdify,\n",
+    ")\n",
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
     "simplify_latex_rendering()\n",
@@ -721,6 +726,45 @@
     "\n",
     "lines = None\n",
     "\n",
+    "__EXPRS: dict[int, sp.Expr] = {}\n",
+    "\n",
+    "\n",
+    "def _get_symbol_values(\n",
+    "    expr: sp.Expr,\n",
+    "    parameters: dict[str, ParameterValue],\n",
+    "    selected_resonances: list[str],\n",
+    ") -> dict[sp.Symbol, sp.Rational]:\n",
+    "    parameters = {\n",
+    "        key: value if any(r in key for r in selected_resonances) else 0\n",
+    "        for key, value in parameters.items()\n",
+    "    }\n",
+    "    return {\n",
+    "        s: sp.Rational(parameters[s.name])\n",
+    "        for s in expr.free_symbols\n",
+    "        if s.name in parameters\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "def _simplify(\n",
+    "    intensity_expr: sp.Expr,\n",
+    "    parameter_defaults: dict[str, ParameterValue],\n",
+    "    selected_resonances: list[str],\n",
+    ") -> sp.Expr:\n",
+    "    parameters = _get_symbol_values(\n",
+    "        intensity_expr, parameter_defaults, selected_resonances\n",
+    "    )\n",
+    "    obj = (\n",
+    "        intensity_expr,\n",
+    "        tuple((k, parameters[k]) for k in sorted(parameters, key=str)),\n",
+    "    )\n",
+    "    h = get_readable_hash(obj)\n",
+    "    if h in __EXPRS:\n",
+    "        return __EXPRS[h]\n",
+    "    expr = intensity_expr.xreplace(parameters)\n",
+    "    expr = sp.trigsimp(expr)\n",
+    "    __EXPRS[h] = expr\n",
+    "    return expr\n",
+    "\n",
     "\n",
     "def plot_contributions(**kwargs) -> None:\n",
     "    kwargs.pop(\"resonance_selector\")\n",
@@ -858,25 +902,20 @@
     "\n",
     "    fig.canvas.draw_idle()\n",
     "\n",
-    "    def get_symbol_values(\n",
-    "        expr: sp.Expr, parameters: dict[str, ParameterValue]\n",
-    "    ) -> dict[sp.Symbol, sp.Rational]:\n",
-    "        parameters = {\n",
-    "            key: value if any(r in key for r in selected_resonances) else 0\n",
-    "            for key, value in parameters.items()\n",
-    "        }\n",
-    "        return {\n",
-    "            s: sp.Rational(parameters[s.name])\n",
-    "            for s in expr.free_symbols\n",
-    "            if s.name in parameters\n",
-    "        }\n",
-    "\n",
-    "    ampform_symbols = get_symbol_values(ampform_intensity_expr, ampform_pars)\n",
-    "    dpd_symbols = get_symbol_values(dpd_intensity_expr, dpd_pars)\n",
+    "    ampform_expr = _simplify(\n",
+    "        ampform_intensity_expr,\n",
+    "        ampform_pars,\n",
+    "        selected_resonances,\n",
+    "    )\n",
+    "    dpd_expr = _simplify(\n",
+    "        dpd_intensity_expr,\n",
+    "        dpd_pars,\n",
+    "        selected_resonances,\n",
+    "    )\n",
     "    src = Rf\"\"\"\n",
     "    \\begin{{eqnarray}}\n",
-    "      \\text{{AmpForm:}} && {sp.latex(ampform_intensity_expr.xreplace(ampform_symbols))} \\\\\n",
-    "      \\text{{DPD:}}     && {sp.latex(dpd_intensity_expr.xreplace(dpd_symbols))} \\\\\n",
+    "      \\text{{AmpForm:}} && {sp.latex(ampform_expr)} \\\\\n",
+    "      \\text{{DPD:}}     && {sp.latex(dpd_expr)} \\\\\n",
     "    \\end{{eqnarray}}\n",
     "    \"\"\"\n",
     "    display(Latex(src))\n",
