DOC: replace non-expression variables

--- a/docs/jpsi2pipipi.ipynb
+++ b/docs/jpsi2pipipi.ipynb
@@ -748,19 +748,22 @@
     "def _simplify(\n",
     "    intensity_expr: sp.Expr,\n",
     "    parameter_defaults: dict[str, ParameterValue],\n",
+    "    variables: dict[sp.Symbol, sp.Expr],\n",
     "    selected_resonances: list[str],\n",
     ") -> sp.Expr:\n",
     "    parameters = _get_symbol_values(\n",
     "        intensity_expr, parameter_defaults, selected_resonances\n",
     "    )\n",
+    "    fixed_variables = {k: v for k, v in variables.items() if not v.free_symbols}\n",
     "    obj = (\n",
     "        intensity_expr,\n",
+    "        tuple((k, fixed_variables[k]) for k in sorted(fixed_variables, key=str)),\n",
     "        tuple((k, parameters[k]) for k in sorted(parameters, key=str)),\n",
     "    )\n",
     "    h = get_readable_hash(obj)\n",
     "    if h in __EXPRS:\n",
     "        return __EXPRS[h]\n",
-    "    expr = intensity_expr.xreplace(parameters)\n",
+    "    expr = intensity_expr.xreplace(parameters).xreplace(fixed_variables)\n",
     "    expr = sp.trigsimp(expr)\n",
     "    __EXPRS[h] = expr\n",
     "    return expr\n",
@@ -905,11 +908,13 @@
     "    ampform_expr = _simplify(\n",
     "        ampform_intensity_expr,\n",
     "        ampform_pars,\n",
+    "        ampform_model.kinematic_variables,\n",
     "        selected_resonances,\n",
     "    )\n",
     "    dpd_expr = _simplify(\n",
     "        dpd_intensity_expr,\n",
     "        dpd_pars,\n",
+    "        dpd_model.variables,\n",
     "        selected_resonances,\n",
     "    )\n",
     "    src = Rf\"\"\"\n",
