FEAT: implement `set_initial_state_polarization()`

--- a/docs/jpsi2pipipi.ipynb
+++ b/docs/jpsi2pipipi.ipynb
@@ -37,6 +37,7 @@
     "from typing import Iterable\n",
     "\n",
     "import ampform\n",
+    "import attrs\n",
     "import graphviz\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
@@ -61,7 +62,11 @@
     "from tensorwaves.data.transform import SympyDataTransformer\n",
     "from tensorwaves.interface import DataSample, ParameterValue, ParametrizedFunction\n",
     "\n",
-    "from ampform_dpd import DalitzPlotDecompositionBuilder, simplify_latex_rendering\n",
+    "from ampform_dpd import (\n",
+    "    DalitzPlotDecompositionBuilder,\n",
+    "    set_initial_state_polarization,\n",
+    "    simplify_latex_rendering,\n",
+    ")\n",
     "from ampform_dpd.decay import (\n",
     "    IsobarNode,\n",
     "    Particle,\n",
@@ -149,7 +154,7 @@
    "outputs": [],
    "source": [
     "reaction = qrules.generate_transitions(\n",
-    "    initial_state=INITIAL_STATE.name,\n",
+    "    initial_state=(INITIAL_STATE.name, [-1, +1]),\n",
     "    final_state=[p.name for p in FINAL_STATE],\n",
     "    allowed_intermediate_particles=[\"a(0)(980)\", \"rho(770)\"],\n",
     "    mass_conservation_factor=0,\n",
@@ -282,7 +287,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -303,7 +307,16 @@
    "outputs": [],
    "source": [
     "model_builder = DalitzPlotDecompositionBuilder(DECAY, min_ls=True)\n",
+    "initial_polarization = {\n",
+    "    t.initial_states[-1].spin_projection for t in reaction.transitions\n",
+    "}\n",
     "dpd_model = model_builder.formulate(reference_subsystem=1)\n",
+    "dpd_model = attrs.evolve(\n",
+    "    dpd_model,\n",
+    "    intensity=set_initial_state_polarization(\n",
+    "        dpd_model.intensity, initial_polarization\n",
+    "    ),\n",
+    ")\n",
     "dpd_model.intensity"
    ]
   },
