DOC: visualize and match angular distributions (#60)
* DOC: simplify rendered expressions

* DX: correctly lint PR labels

* DX: fold AmpForm section in Jupyter lab
  Speeds up rendering of the notebook in the default view

* FIX: allow setting negative values for couplings

* FIX: build decay with consistent cyclic permutation

* FIX: choose π₁ as resonance
  K* is not physically allowed, because it requires the decay node to be weak

* FIX: match coupling values

* MAINT: generalize naming of Mandelstam-related variables

* MAINT: organize slider building cell as functions

--- a/docs/jpsi2pipipi.ipynb
+++ b/docs/jpsi2pipipi.ipynb
@@ -68,7 +68,12 @@
     "    ThreeBodyDecay,\n",
     "    ThreeBodyDecayChain,\n",
     ")\n",
-    "from ampform_dpd.io import as_markdown_table, aslatex, perform_cached_lambdify\n",
+    "from ampform_dpd.io import (\n",
+    "    as_markdown_table,\n",
+    "    aslatex,\n",
+    "    get_readable_hash,\n",
+    "    perform_cached_lambdify,\n",
+    ")\n",
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
     "simplify_latex_rendering()\n",
@@ -167,7 +172,11 @@
    },
    "outputs": [],
    "source": [
-    "resonance_names = sorted(reaction.get_intermediate_particles().names)\n",
+    "qrules_resonances = sorted(\n",
+    "    reaction.get_intermediate_particles(),\n",
+    "    key=lambda p: (p.charge, p.mass, p.name),\n",
+    ")\n",
+    "resonance_names = [p.name for p in qrules_resonances]\n",
     "resonances = [PARTICLE_DB[name] for name in resonance_names]\n",
     "Markdown(as_markdown_table(resonances))"
    ]
@@ -191,9 +200,9 @@
     "    particle_definitions: dict[str, Particle],\n",
     "    min_ls: bool = True,\n",
     ") -> ThreeBodyDecay:\n",
-    "    resonances = [particle_definitions[name] for name in resonance_names]\n",
+    "    _resonances = [particle_definitions[name] for name in resonance_names]\n",
     "    chains: list[ThreeBodyDecayChain] = []\n",
-    "    for res in resonances:\n",
+    "    for res in _resonances:\n",
     "        chains.extend(_create_isobar(res, min_ls))\n",
     "    return ThreeBodyDecay(\n",
     "        states={state_id: particle for particle, state_id in PARTICLE_TO_ID.items()},\n",
@@ -207,7 +216,7 @@
     "    elif resonance.name.endswith(\"+\"):\n",
     "        child1, child2, spectator = FS_pos, FS_zero, FS_neg\n",
     "    else:\n",
-    "        child1, child2, spectator = FS_pos, FS_neg, FS_zero\n",
+    "        child1, child2, spectator = FS_neg, FS_pos, FS_zero\n",
     "    prod_ls_couplings = _generate_ls(\n",
     "        INITIAL_STATE, resonance, spectator, conserve_parity=False\n",
     "    )\n",
@@ -362,6 +371,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -609,50 +619,60 @@
    },
    "outputs": [],
    "source": [
+    "def create_sliders() -> dict[str, FloatSlider]:\n",
+    "    all_parameters = {k: v for k, v in ampform_model.parameter_defaults.items()}\n",
+    "    all_parameters.update({k: v for k, v in dpd_model.parameter_defaults.items()})\n",
+    "    sliders = {}\n",
+    "    for symbol, value in all_parameters.items():\n",
+    "        value = complex(value).real\n",
+    "        if (\n",
+    "            symbol.name.startswith(R\"\\mathcal{H}^\\mathrm{decay}\")\n",
+    "            and \"+\" in symbol.name\n",
+    "        ):\n",
+    "            if any(s in symbol.name for s in [\"{1}\", \"*\", \"rho\"]):\n",
+    "                value *= -1\n",
+    "        sliders[symbol.name] = FloatSlider(\n",
+    "            description=Rf\"\\({sp.latex(symbol)}\\)\",\n",
+    "            value=value,\n",
+    "            min=-2.0 * abs(complex(value).real),\n",
+    "            max=+2.0 * abs(complex(value).real),\n",
+    "            continuous_update=False,\n",
+    "            step=0.1,\n",
+    "            layout=Layout(width=\"16cm\"),\n",
+    "            style={\"description_width\": \"8cm\"},\n",
+    "        )\n",
+    "    return sliders\n",
+    "\n",
+    "\n",
+    "def create_resonance_selector() -> SelectMultiple:\n",
+    "    return SelectMultiple(\n",
+    "        description=\"Resonance\",\n",
+    "        options={to_unicode(p): p.latex for p in resonances},\n",
+    "        value=[resonances[0].latex, resonances[1].latex],\n",
+    "        layout=Layout(\n",
+    "            height=f\"{14 * (len(resonances)+1)}pt\",\n",
+    "            width=\"auto\",\n",
+    "        ),\n",
+    "    )\n",
+    "\n",
+    "\n",
     "def to_unicode(particle: Particle) -> str:\n",
     "    unicode = particle.name\n",
+    "    unicode = unicode.replace(\"pi\", \"π\")\n",
+    "    unicode = unicode.replace(\"rho\", \"ρ\")\n",
     "    unicode = unicode.replace(\"Sigma\", \"Σ\")\n",
     "    unicode = unicode.replace(\"~\", \"\")\n",
     "    unicode = unicode.replace(\"Σ\", \"~Σ\")\n",
     "    unicode = unicode.replace(\"+\", \"⁺\")\n",
     "    unicode = unicode.replace(\"-\", \"⁻\")\n",
     "    unicode = unicode.replace(\"(0)\", \"₀\")\n",
+    "    unicode = unicode.replace(\"(1)\", \"₁\")\n",
     "    unicode = unicode.replace(\")0\", \")⁰\")\n",
     "    return unicode\n",
     "\n",
     "\n",
-    "resonances = ampform_model.reaction_info.get_intermediate_particles()\n",
-    "resonances = sorted(resonances, key=lambda p: (p.charge, p.mass, p.name))\n",
-    "resonance_selector = SelectMultiple(\n",
-    "    description=\"Resonance\",\n",
-    "    options={to_unicode(p): p.latex for p in resonances},\n",
-    "    value=[resonances[1].latex],\n",
-    "    layout=Layout(\n",
-    "        height=f\"{14 * (len(resonances)+1)}pt\",\n",
-    "        width=\"auto\",\n",
-    "    ),\n",
-    ")\n",
-    "\n",
-    "all_parameters = {k: v for k, v in ampform_model.parameter_defaults.items()}\n",
-    "all_parameters.update({k: v for k, v in dpd_model.parameter_defaults.items()})\n",
-    "sliders = {\n",
-    "    str(symbol): FloatSlider(\n",
-    "        description=Rf\"\\({sp.latex(symbol)}\\)\",\n",
-    "        value=complex(value).real,\n",
-    "        min=0,\n",
-    "        max=2.0 * complex(value).real,\n",
-    "        continuous_update=False,\n",
-    "        step=0.01,\n",
-    "        layout=Layout(\n",
-    "            width=\"16cm\",\n",
-    "        ),\n",
-    "        style={\n",
-    "            \"description_width\": \"8cm\",\n",
-    "        },\n",
-    "    )\n",
-    "    for symbol, value in all_parameters.items()\n",
-    "}\n",
-    "\n",
+    "sliders = create_sliders()\n",
+    "resonance_selector = create_resonance_selector()\n",
     "ui = HBox(\n",
     "    [\n",
     "        resonance_selector,\n",
@@ -686,61 +706,144 @@
    "source": [
     "%matplotlib widget\n",
     "plt.rc(\"font\", size=12)\n",
-    "fig, axes = plt.subplots(ncols=3, figsize=(16, 5), sharey=True)\n",
-    "ax1, ax2, ax3 = axes\n",
+    "fig, axes = plt.subplots(figsize=(16, 8), ncols=3, nrows=2)\n",
+    "(\n",
+    "    (ax_s1, ax_s2, ax_s3),\n",
+    "    (ax_t1, ax_t2, ax_t3),\n",
+    ") = axes\n",
     "final_state = ampform_model.reaction_info.final_state\n",
-    "ax1.set_ylabel(\"Intensity (a.u.)\")\n",
-    "ax1.set_xlabel(Rf\"$m({FINAL_STATE[1].latex}, {FINAL_STATE[2].latex})$\")\n",
-    "ax2.set_xlabel(Rf\"$m({FINAL_STATE[0].latex}, {FINAL_STATE[2].latex})$\")\n",
-    "ax3.set_xlabel(Rf\"$m({FINAL_STATE[0].latex}, {FINAL_STATE[1].latex})$\")\n",
+    "for ax in axes[:, 0].flatten():\n",
+    "    ax.set_ylabel(\"Intensity (a.u.)\")\n",
+    "for ax in axes[:, 1:].flatten():\n",
+    "    ax.set_yticks([])\n",
+    "ax_s1.set_xlabel(f\"$m({FINAL_STATE[1].latex}, {FINAL_STATE[2].latex})$\")\n",
+    "ax_s2.set_xlabel(f\"$m({FINAL_STATE[0].latex}, {FINAL_STATE[2].latex})$\")\n",
+    "ax_s3.set_xlabel(f\"$m({FINAL_STATE[0].latex}, {FINAL_STATE[1].latex})$\")\n",
+    "ax_t1.set_xlabel(Rf\"$\\theta({FINAL_STATE[1].latex}, {FINAL_STATE[2].latex})$\")\n",
+    "ax_t2.set_xlabel(Rf\"$\\theta({FINAL_STATE[0].latex}, {FINAL_STATE[2].latex})$\")\n",
+    "ax_t3.set_xlabel(Rf\"$\\theta({FINAL_STATE[0].latex}, {FINAL_STATE[1].latex})$\")\n",
     "fig.tight_layout()\n",
     "\n",
     "lines = None\n",
     "\n",
+    "__EXPRS: dict[int, sp.Expr] = {}\n",
+    "\n",
+    "\n",
+    "def _get_symbol_values(\n",
+    "    expr: sp.Expr,\n",
+    "    parameters: dict[str, ParameterValue],\n",
+    "    selected_resonances: list[str],\n",
+    ") -> dict[sp.Symbol, sp.Rational]:\n",
+    "    parameters = {\n",
+    "        key: value if any(r in key for r in selected_resonances) else 0\n",
+    "        for key, value in parameters.items()\n",
+    "    }\n",
+    "    return {\n",
+    "        s: sp.Rational(parameters[s.name])\n",
+    "        for s in expr.free_symbols\n",
+    "        if s.name in parameters\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "def _simplify(\n",
+    "    intensity_expr: sp.Expr,\n",
+    "    parameter_defaults: dict[str, ParameterValue],\n",
+    "    variables: dict[sp.Symbol, sp.Expr],\n",
+    "    selected_resonances: list[str],\n",
+    ") -> sp.Expr:\n",
+    "    parameters = _get_symbol_values(\n",
+    "        intensity_expr, parameter_defaults, selected_resonances\n",
+    "    )\n",
+    "    fixed_variables = {k: v for k, v in variables.items() if not v.free_symbols}\n",
+    "    obj = (\n",
+    "        intensity_expr,\n",
+    "        tuple((k, fixed_variables[k]) for k in sorted(fixed_variables, key=str)),\n",
+    "        tuple((k, parameters[k]) for k in sorted(parameters, key=str)),\n",
+    "    )\n",
+    "    h = get_readable_hash(obj)\n",
+    "    if h in __EXPRS:\n",
+    "        return __EXPRS[h]\n",
+    "    expr = intensity_expr.xreplace(parameters).xreplace(fixed_variables)\n",
+    "    expr = sp.trigsimp(expr)\n",
+    "    __EXPRS[h] = expr\n",
+    "    return expr\n",
+    "\n",
     "\n",
     "def plot_contributions(**kwargs) -> None:\n",
     "    kwargs.pop(\"resonance_selector\")\n",
-    "    resonance_names = list(resonance_selector.value)\n",
+    "    selected_resonances = list(resonance_selector.value)\n",
     "    dpd_pars = {k: v for k, v in kwargs.items() if k in dpd_func.parameters}\n",
     "    ampform_pars = {k: v for k, v in kwargs.items() if k in ampform_func.parameters}\n",
     "    ampform_func.update_parameters(ampform_pars)\n",
     "    dpd_func.update_parameters(dpd_pars)\n",
     "    ampform_intensities = compute_sub_intensities(\n",
-    "        ampform_func, ampform_phsp, resonance_names\n",
+    "        ampform_func, ampform_phsp, selected_resonances\n",
     "    )\n",
-    "    dpd_intensities = compute_sub_intensities(dpd_func, dpd_phsp, resonance_names)\n",
+    "    dpd_intensities = compute_sub_intensities(\n",
+    "        dpd_func, dpd_phsp, selected_resonances\n",
+    "    )\n",
     "\n",
-    "    edges = jnp.linspace(0.2, 3.0, num=50)\n",
-    "    amp_values_s1, edges_s1 = jnp.histogram(\n",
+    "    s_edges = jnp.linspace(0.2, 3.0, num=50)\n",
+    "    amp_values_s1, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_12\"].real,\n",
-    "        bins=edges,\n",
+    "        bins=s_edges,\n",
     "        weights=ampform_intensities,\n",
     "    )\n",
     "    dpd_values_s1, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_12\"].real,\n",
-    "        bins=edges,\n",
+    "        bins=s_edges,\n",
     "        weights=dpd_intensities,\n",
     "    )\n",
-    "\n",
-    "    amp_values_s2, edges_s2 = jnp.histogram(\n",
+    "    amp_values_s2, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_02\"].real,\n",
-    "        bins=edges,\n",
+    "        bins=s_edges,\n",
     "        weights=ampform_intensities,\n",
     "    )\n",
     "    dpd_values_s2, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_02\"].real,\n",
-    "        bins=edges,\n",
+    "        bins=s_edges,\n",
     "        weights=dpd_intensities,\n",
     "    )\n",
-    "\n",
-    "    amp_values_s3, edges_s3 = jnp.histogram(\n",
+    "    amp_values_s3, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_01\"].real,\n",
-    "        bins=edges,\n",
+    "        bins=s_edges,\n",
     "        weights=ampform_intensities,\n",
     "    )\n",
     "    dpd_values_s3, _ = jnp.histogram(\n",
     "        ampform_phsp[\"m_01\"].real,\n",
-    "        bins=edges,\n",
+    "        bins=s_edges,\n",
+    "        weights=dpd_intensities,\n",
+    "    )\n",
+    "\n",
+    "    t_edges = jnp.linspace(0, jnp.pi, num=50)\n",
+    "    amp_values_t1, _ = jnp.histogram(\n",
+    "        dpd_phsp[\"theta_23\"].real,\n",
+    "        bins=t_edges,\n",
+    "        weights=ampform_intensities,\n",
+    "    )\n",
+    "    dpd_values_t1, _ = jnp.histogram(\n",
+    "        dpd_phsp[\"theta_23\"].real,\n",
+    "        bins=t_edges,\n",
+    "        weights=dpd_intensities,\n",
+    "    )\n",
+    "    amp_values_t2, _ = jnp.histogram(\n",
+    "        dpd_phsp[\"theta_31\"].real,\n",
+    "        bins=t_edges,\n",
+    "        weights=ampform_intensities,\n",
+    "    )\n",
+    "    dpd_values_t2, _ = jnp.histogram(\n",
+    "        dpd_phsp[\"theta_31\"].real,\n",
+    "        bins=t_edges,\n",
+    "        weights=dpd_intensities,\n",
+    "    )\n",
+    "    amp_values_t3, _ = jnp.histogram(\n",
+    "        dpd_phsp[\"theta_23\"].real,\n",
+    "        bins=t_edges,\n",
+    "        weights=ampform_intensities,\n",
+    "    )\n",
+    "    dpd_values_t3, _ = jnp.histogram(\n",
+    "        dpd_phsp[\"theta_23\"].real,\n",
+    "        bins=t_edges,\n",
     "        weights=dpd_intensities,\n",
     "    )\n",
     "\n",
@@ -748,18 +851,23 @@
     "    amp_kwargs = dict(color=\"r\", label=\"ampform\", linestyle=\"solid\")\n",
     "    dpd_kwargs = dict(color=\"blue\", label=\"dpd\", linestyle=\"dotted\")\n",
     "    if lines is None:\n",
-    "        x1 = (edges_s1[:-1] + edges_s1[1:]) / 2\n",
-    "        x2 = (edges_s2[:-1] + edges_s2[1:]) / 2\n",
-    "        x3 = (edges_s3[:-1] + edges_s3[1:]) / 2\n",
+    "        sx = (s_edges[:-1] + s_edges[1:]) / 2\n",
+    "        tx = (t_edges[:-1] + t_edges[1:]) / 2\n",
     "        lines = [\n",
-    "            ax1.step(x1, amp_values_s1, **amp_kwargs)[0],\n",
-    "            ax1.step(x1, dpd_values_s1, **dpd_kwargs)[0],\n",
-    "            ax2.step(x2, amp_values_s2, **amp_kwargs)[0],\n",
-    "            ax2.step(x2, dpd_values_s2, **dpd_kwargs)[0],\n",
-    "            ax3.step(x3, amp_values_s3, **amp_kwargs)[0],\n",
-    "            ax3.step(x3, dpd_values_s3, **dpd_kwargs)[0],\n",
+    "            ax_s1.step(sx, amp_values_s1, **amp_kwargs)[0],\n",
+    "            ax_s1.step(sx, dpd_values_s1, **dpd_kwargs)[0],\n",
+    "            ax_s2.step(sx, amp_values_s2, **amp_kwargs)[0],\n",
+    "            ax_s2.step(sx, dpd_values_s2, **dpd_kwargs)[0],\n",
+    "            ax_s3.step(sx, amp_values_s3, **amp_kwargs)[0],\n",
+    "            ax_s3.step(sx, dpd_values_s3, **dpd_kwargs)[0],\n",
+    "            ax_t1.step(tx, amp_values_t1, **amp_kwargs)[0],\n",
+    "            ax_t1.step(tx, dpd_values_t1, **dpd_kwargs)[0],\n",
+    "            ax_t2.step(tx, amp_values_t2, **amp_kwargs)[0],\n",
+    "            ax_t2.step(tx, dpd_values_t2, **dpd_kwargs)[0],\n",
+    "            ax_t3.step(tx, amp_values_t3, **amp_kwargs)[0],\n",
+    "            ax_t3.step(tx, dpd_values_t3, **dpd_kwargs)[0],\n",
     "        ]\n",
-    "        ax1.legend(loc=\"upper right\")\n",
+    "        ax_s1.legend(loc=\"upper right\")\n",
     "    else:\n",
     "        lines[0].set_ydata(amp_values_s1)\n",
     "        lines[1].set_ydata(dpd_values_s1)\n",
@@ -767,7 +875,14 @@
     "        lines[3].set_ydata(dpd_values_s2)\n",
     "        lines[4].set_ydata(amp_values_s3)\n",
     "        lines[5].set_ydata(dpd_values_s3)\n",
-    "    y_max = max(\n",
+    "        lines[6].set_ydata(amp_values_t1)\n",
+    "        lines[7].set_ydata(dpd_values_t1)\n",
+    "        lines[8].set_ydata(amp_values_t2)\n",
+    "        lines[9].set_ydata(dpd_values_t2)\n",
+    "        lines[10].set_ydata(amp_values_t3)\n",
+    "        lines[11].set_ydata(dpd_values_t3)\n",
+    "\n",
+    "    sy_max = max(\n",
     "        jnp.nanmax(amp_values_s1),\n",
     "        jnp.nanmax(dpd_values_s1),\n",
     "        jnp.nanmax(amp_values_s2),\n",
@@ -775,31 +890,37 @@
     "        jnp.nanmax(amp_values_s3),\n",
     "        jnp.nanmax(dpd_values_s3),\n",
     "    )\n",
-    "    ax1.set_ylim(0, 1.05 * y_max)\n",
-    "    ax2.set_ylim(0, 1.05 * y_max)\n",
-    "    ax3.set_ylim(0, 1.05 * y_max)\n",
+    "    ty_max = max(\n",
+    "        jnp.nanmax(amp_values_t1),\n",
+    "        jnp.nanmax(dpd_values_t1),\n",
+    "        jnp.nanmax(amp_values_t2),\n",
+    "        jnp.nanmax(dpd_values_t2),\n",
+    "        jnp.nanmax(amp_values_t3),\n",
+    "        jnp.nanmax(dpd_values_t3),\n",
+    "    )\n",
+    "    for ax in axes[0]:\n",
+    "        ax.set_ylim(0, 1.05 * sy_max)\n",
+    "    for ax in axes[1]:\n",
+    "        ax.set_ylim(0, 1.05 * ty_max)\n",
     "\n",
     "    fig.canvas.draw_idle()\n",
     "\n",
-    "    def get_symbol_values(\n",
-    "        expr: sp.Expr, parameters: dict[str, ParameterValue]\n",
-    "    ) -> dict[sp.Symbol, sp.Rational]:\n",
-    "        parameters = {\n",
-    "            key: value if any(r in key for r in resonance_names) else 0\n",
-    "            for key, value in parameters.items()\n",
-    "        }\n",
-    "        return {\n",
-    "            s: sp.Rational(parameters[s.name])\n",
-    "            for s in expr.free_symbols\n",
-    "            if s.name in parameters\n",
-    "        }\n",
-    "\n",
-    "    ampform_symbols = get_symbol_values(ampform_intensity_expr, ampform_pars)\n",
-    "    dpd_symbols = get_symbol_values(dpd_intensity_expr, dpd_pars)\n",
+    "    ampform_expr = _simplify(\n",
+    "        ampform_intensity_expr,\n",
+    "        ampform_pars,\n",
+    "        ampform_model.kinematic_variables,\n",
+    "        selected_resonances,\n",
+    "    )\n",
+    "    dpd_expr = _simplify(\n",
+    "        dpd_intensity_expr,\n",
+    "        dpd_pars,\n",
+    "        dpd_model.variables,\n",
+    "        selected_resonances,\n",
+    "    )\n",
     "    src = Rf\"\"\"\n",
     "    \\begin{{eqnarray}}\n",
-    "      \\text{{AmpForm:}} && {sp.latex(ampform_intensity_expr.xreplace(ampform_symbols))} \\\\\n",
-    "      \\text{{DPD:}}     && {sp.latex(dpd_intensity_expr.xreplace(dpd_symbols))} \\\\\n",
+    "      \\text{{AmpForm:}} && {sp.latex(ampform_expr)} \\\\\n",
+    "      \\text{{DPD:}}     && {sp.latex(dpd_expr)} \\\\\n",
     "    \\end{{eqnarray}}\n",
     "    \"\"\"\n",
     "    display(Latex(src))\n",
