ENH: allow setting coupling to zero

--- a/docs/jpsi2pipipi.ipynb
+++ b/docs/jpsi2pipipi.ipynb
@@ -633,7 +633,7 @@
     "                value = \"-1\"\n",
     "        sliders[symbol.name] = ToggleButtons(\n",
     "            description=Rf\"\\({sp.latex(symbol)}\\)\",\n",
-    "            options=[\"-1\", \"+1\"],\n",
+    "            options=[\"-1\", \"0\", \"+1\"],\n",
     "            value=value,\n",
     "            continuous_update=False,\n",
     "        )\n",
