DOC: render coupling sliders as `ToggleButton` (#61)
* DX: remove `concurrency` from PR linting
  It is annoying that jobs fail if one simply changes the PR label
* ENH: allow setting coupling to zero

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -47,12 +47,12 @@
     "from ampform.sympy import perform_cached_doit\n",
     "from IPython.display import SVG, Latex, Markdown, display\n",
     "from ipywidgets import (\n",
-    "    FloatSlider,\n",
     "    GridBox,\n",
     "    HBox,\n",
     "    Layout,\n",
     "    SelectMultiple,\n",
     "    Tab,\n",
+    "    ToggleButtons,\n",
     "    interactive_output,\n",
     ")\n",
     "from qrules.transition import ReactionInfo\n",
@@ -636,27 +636,23 @@
    },
    "outputs": [],
    "source": [
-    "def create_sliders() -> dict[str, FloatSlider]:\n",
+    "def create_sliders() -> dict[str, ToggleButtons]:\n",
     "    all_parameters = {k: v for k, v in ampform_model.parameter_defaults.items()}\n",
     "    all_parameters.update({k: v for k, v in dpd_model.parameter_defaults.items()})\n",
     "    sliders = {}\n",
     "    for symbol, value in all_parameters.items():\n",
-    "        value = complex(value).real\n",
+    "        value = \"+1\"\n",
     "        if (\n",
     "            symbol.name.startswith(R\"\\mathcal{H}^\\mathrm{decay}\")\n",
     "            and \"+\" in symbol.name\n",
     "        ):\n",
     "            if any(s in symbol.name for s in [\"{1}\", \"*\", \"rho\"]):\n",
-    "                value *= -1\n",
-    "        sliders[symbol.name] = FloatSlider(\n",
+    "                value = \"-1\"\n",
+    "        sliders[symbol.name] = ToggleButtons(\n",
     "            description=Rf\"\\({sp.latex(symbol)}\\)\",\n",
+    "            options=[\"-1\", \"0\", \"+1\"],\n",
     "            value=value,\n",
-    "            min=-2.0 * abs(complex(value).real),\n",
-    "            max=+2.0 * abs(complex(value).real),\n",
     "            continuous_update=False,\n",
-    "            step=0.1,\n",
-    "            layout=Layout(width=\"16cm\"),\n",
-    "            style={\"description_width\": \"8cm\"},\n",
     "        )\n",
     "    return sliders\n",
     "\n",
@@ -723,7 +719,7 @@
    "source": [
     "%matplotlib widget\n",
     "plt.rc(\"font\", size=12)\n",
-    "fig, axes = plt.subplots(figsize=(16, 8), ncols=3, nrows=2)\n",
+    "fig, axes = plt.subplots(figsize=(16, 6), ncols=3, nrows=2)\n",
     "(\n",
     "    (ax_s1, ax_s2, ax_s3),\n",
     "    (ax_t1, ax_t2, ax_t3),\n",
@@ -789,8 +785,10 @@
     "def plot_contributions(**kwargs) -> None:\n",
     "    kwargs.pop(\"resonance_selector\")\n",
     "    selected_resonances = list(resonance_selector.value)\n",
-    "    dpd_pars = {k: v for k, v in kwargs.items() if k in dpd_func.parameters}\n",
-    "    ampform_pars = {k: v for k, v in kwargs.items() if k in ampform_func.parameters}\n",
+    "    dpd_pars = {k: int(v) for k, v in kwargs.items() if k in dpd_func.parameters}\n",
+    "    ampform_pars = {\n",
+    "        k: int(v) for k, v in kwargs.items() if k in ampform_func.parameters\n",
+    "    }\n",
     "    ampform_func.update_parameters(ampform_pars)\n",
     "    dpd_func.update_parameters(dpd_pars)\n",
     "    ampform_intensities = compute_sub_intensities(\n",
