--- a/docs/jpsi2phipipi.ipynb
+++ b/docs/jpsi2phipipi.ipynb
@@ -81,6 +81,7 @@
     "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"  # mute TF\n",
     "NO_TQDM = \"EXECUTE_NB\" in os.environ\n",
     "if NO_TQDM:\n",
+    "    logging.getLogger(\"ampform.sympy\").setLevel(logging.ERROR)\n",
     "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)"
    ]
   },
