FIX: set correct SVG filenames

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -964,7 +964,7 @@
    "outputs": [],
    "source": [
     "if NO_TQDM:\n",
-    "    filename = \"d0-to-kkk-comparison.svg\"\n",
+    "    filename = \"d02kkk-comparison.svg\"\n",
     "    plt.savefig(filename)\n",
     "    display(SVG(filename))"
    ]
