--- a/docs/jpsi2phipipi.ipynb
+++ b/docs/jpsi2phipipi.ipynb
@@ -949,7 +949,7 @@
    "outputs": [],
    "source": [
     "if NO_TQDM:\n",
-    "    filename = \"d0-to-kkk-comparison.svg\"\n",
+    "    filename = \"jpsi2phipipi-comparison.svg\"\n",
     "    plt.savefig(filename)\n",
     "    display(SVG(filename))"
    ]
