--- a/docs/jpsi2pipipi.ipynb
+++ b/docs/jpsi2pipipi.ipynb
@@ -947,7 +947,7 @@
    "outputs": [],
    "source": [
     "if NO_TQDM:\n",
-    "    filename = \"d0-to-kkk-comparison.svg\"\n",
+    "    filename = \"jpsi2pipipi-comparison.svg\"\n",
     "    plt.savefig(filename)\n",
     "    display(SVG(filename))"
    ]
