DOC: show selected resonances as plot title

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -735,6 +735,7 @@
     "ax_t1.set_xlabel(Rf\"$\\theta({FINAL_STATE[1].latex}, {FINAL_STATE[2].latex})$\")\n",
     "ax_t2.set_xlabel(Rf\"$\\theta({FINAL_STATE[0].latex}, {FINAL_STATE[2].latex})$\")\n",
     "ax_t3.set_xlabel(Rf\"$\\theta({FINAL_STATE[0].latex}, {FINAL_STATE[1].latex})$\")\n",
+    "fig.suptitle(f'Selected resonances: ${\", \".join(resonance_selector.value)}$')\n",
     "fig.tight_layout()\n",
     "\n",
     "lines = None\n",
@@ -785,6 +786,7 @@
     "def plot_contributions(**kwargs) -> None:\n",
     "    kwargs.pop(\"resonance_selector\")\n",
     "    selected_resonances = list(resonance_selector.value)\n",
+    "    fig.suptitle(f'Selected resonances: ${\", \".join(selected_resonances)}$')\n",
     "    dpd_pars = {k: int(v) for k, v in kwargs.items() if k in dpd_func.parameters}\n",
     "    ampform_pars = {\n",
     "        k: int(v) for k, v in kwargs.items() if k in ampform_func.parameters\n",
