ENH: hide ipympl toolbars etc.

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -723,6 +723,9 @@
     "%matplotlib widget\n",
     "plt.rc(\"font\", size=12)\n",
     "fig, axes = plt.subplots(figsize=(16, 6), ncols=3, nrows=2)\n",
+    "fig.canvas.toolbar_visible = False\n",
+    "fig.canvas.header_visible = False\n",
+    "fig.canvas.footer_visible = False\n",
     "(\n",
     "    (ax_s1, ax_s2, ax_s3),\n",
     "    (ax_t1, ax_t2, ax_t3),\n",
