ENH: add toggle buttons for showing expressions

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -34,10 +34,12 @@
     "import itertools\n",
     "import logging\n",
     "import os\n",
+    "from textwrap import dedent\n",
     "from typing import Iterable\n",
     "\n",
     "import ampform\n",
     "import graphviz\n",
+    "import ipywidgets\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
     "import qrules\n",
@@ -45,14 +47,16 @@
     "from ampform.helicity import HelicityModel\n",
     "from ampform.kinematics import FourMomentumSymbol, InvariantMass\n",
     "from ampform.sympy import perform_cached_doit\n",
-    "from IPython.display import SVG, Latex, Markdown, display\n",
+    "from IPython.display import SVG, Latex, Markdown, clear_output, display\n",
     "from ipywidgets import (\n",
+    "    Checkbox,\n",
     "    GridBox,\n",
     "    HBox,\n",
     "    Layout,\n",
     "    SelectMultiple,\n",
     "    Tab,\n",
     "    ToggleButtons,\n",
+    "    VBox,\n",
     "    interactive_output,\n",
     ")\n",
     "from qrules.transition import ReactionInfo\n",
@@ -657,18 +661,6 @@
     "    return sliders\n",
     "\n",
     "\n",
-    "def create_resonance_selector() -> SelectMultiple:\n",
-    "    return SelectMultiple(\n",
-    "        description=\"Resonance\",\n",
-    "        options={to_unicode(p): p.latex for p in resonances},\n",
-    "        value=[resonances[0].latex, resonances[1].latex],\n",
-    "        layout=Layout(\n",
-    "            height=f\"{14 * (len(resonances)+1)}pt\",\n",
-    "            width=\"auto\",\n",
-    "        ),\n",
-    "    )\n",
-    "\n",
-    "\n",
     "def to_unicode(particle: Particle) -> str:\n",
     "    unicode = particle.name\n",
     "    unicode = unicode.replace(\"pi\", \"π\")\n",
@@ -685,10 +677,21 @@
     "\n",
     "\n",
     "sliders = create_sliders()\n",
-    "resonance_selector = create_resonance_selector()\n",
+    "resonance_selector = SelectMultiple(\n",
+    "    description=\"Resonance\",\n",
+    "    options={to_unicode(p): p.latex for p in resonances},\n",
+    "    value=[resonances[0].latex, resonances[1].latex],\n",
+    "    layout=Layout(\n",
+    "        height=f\"{14 * (len(resonances)+1)}pt\",\n",
+    "        width=\"auto\",\n",
+    "    ),\n",
+    ")\n",
+    "hide_expressions = Checkbox(description=\"Hide expressions\", value=True)\n",
+    "simplify_expressions = Checkbox(description=\"Simplify\", value=True)\n",
+    "ipywidgets.link((hide_expressions, \"value\"), (simplify_expressions, \"disabled\"))\n",
     "ui = HBox(\n",
     "    [\n",
-    "        resonance_selector,\n",
+    "        VBox([resonance_selector, hide_expressions, simplify_expressions]),\n",
     "        Tab(\n",
     "            children=[\n",
     "                GridBox([sliders[key] for key in sorted(sliders) if p.latex in key])\n",
@@ -784,6 +787,8 @@
     "\n",
     "def plot_contributions(**kwargs) -> None:\n",
     "    kwargs.pop(\"resonance_selector\")\n",
+    "    kwargs.pop(\"hide_expressions\")\n",
+    "    kwargs.pop(\"simplify_expressions\")\n",
     "    selected_resonances = list(resonance_selector.value)\n",
     "    dpd_pars = {k: int(v) for k, v in kwargs.items() if k in dpd_func.parameters}\n",
     "    ampform_pars = {\n",
@@ -920,30 +925,43 @@
     "\n",
     "    fig.canvas.draw_idle()\n",
     "\n",
-    "    ampform_expr = _simplify(\n",
-    "        ampform_intensity_expr,\n",
-    "        ampform_pars,\n",
-    "        ampform_model.kinematic_variables,\n",
-    "        selected_resonances,\n",
-    "    )\n",
-    "    dpd_expr = _simplify(\n",
-    "        dpd_intensity_expr,\n",
-    "        dpd_pars,\n",
-    "        dpd_model.variables,\n",
-    "        selected_resonances,\n",
-    "    )\n",
-    "    src = Rf\"\"\"\n",
-    "    \\begin{{eqnarray}}\n",
-    "      \\text{{AmpForm:}} && {sp.latex(ampform_expr)} \\\\\n",
-    "      \\text{{DPD:}}     && {sp.latex(dpd_expr)} \\\\\n",
-    "    \\end{{eqnarray}}\n",
-    "    \"\"\"\n",
-    "    display(Latex(src))\n",
+    "    if hide_expressions.value:\n",
+    "        clear_output()\n",
+    "    else:\n",
+    "        if simplify_expressions.value:\n",
+    "            ampform_expr = _simplify(\n",
+    "                ampform_intensity_expr,\n",
+    "                ampform_pars,\n",
+    "                ampform_model.kinematic_variables,\n",
+    "                selected_resonances,\n",
+    "            )\n",
+    "            dpd_expr = _simplify(\n",
+    "                dpd_intensity_expr,\n",
+    "                dpd_pars,\n",
+    "                dpd_model.variables,\n",
+    "                selected_resonances,\n",
+    "            )\n",
+    "        else:\n",
+    "            ampform_expr = ampform_intensity_expr\n",
+    "            dpd_expr = dpd_intensity_expr\n",
+    "        src = Rf\"\"\"\n",
+    "        \\begin{{eqnarray}}\n",
+    "          \\text{{AmpForm:}} && {sp.latex(ampform_expr)} \\\\\n",
+    "          \\text{{DPD:}}     && {sp.latex(dpd_expr)} \\\\\n",
+    "        \\end{{eqnarray}}\n",
+    "        \"\"\"\n",
+    "        src = dedent(src).strip()\n",
+    "        display(Latex(src))\n",
     "\n",
     "\n",
     "output = interactive_output(\n",
     "    plot_contributions,\n",
-    "    controls={**sliders, \"resonance_selector\": resonance_selector},\n",
+    "    controls={\n",
+    "        **sliders,\n",
+    "        \"resonance_selector\": resonance_selector,\n",
+    "        \"hide_expressions\": hide_expressions,\n",
+    "        \"simplify_expressions\": simplify_expressions,\n",
+    "    },\n",
     ")\n",
     "display(output, ui)"
    ]
